# sway-groups

./: .gitignore  CLI_SPEC.md  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW.md  Cargo.toml  LICENSE  PLAN_CONFIG.md  PLAN_GROUP_ZERO.md  PLAN_OPTIONAL_OUTPUT.md  PLAN_RUST_TESTS.md  README.md  REDESIGN_PLAN.md  WAYBAR_DYNAMIC_PLAN.md  commands.md  swayg-daemon.service  swaygd.service
scripts/: debug-cmd  rofi-add-to-group  rofi-group-create  rofi-group-delete  rofi-group-rename  rofi-group-select  rofi-menu  rofi-move-to-workspace  rofi-nav-go  rofi-switch-workspace  rofi-workspace-add  rofi-workspace-move  rofi-workspace-remove  toggle-workspace-global
sway-groups-cli/: Cargo.toml
sway-groups-cli/src/: commands.rs  main.rs
sway-groups-config/: Cargo.toml
sway-groups-config/src/: lib.rs
sway-groups-core/: Cargo.toml
sway-groups-core/src/: error.rs  lib.rs  notification.rs
sway-groups-core/src/db/: database.rs  mod.rs  queries.rs
sway-groups-core/src/db/entities/: focus_history.rs  group.rs  group_state.rs  hidden_workspace.rs  mod.rs  output.rs  pending_workspace_event.rs  setting.rs  workspace.rs  workspace_group.rs
sway-groups-core/src/services/: group_service.rs  mod.rs  navigation_service.rs  suffix_service.rs  visibility_service.rs  waybar_sync_service.rs  workspace_service.rs
sway-groups-core/src/sway/: client.rs  mod.rs  pid_resolver.rs  types.rs  waybar_client.rs
sway-groups-daemon/: Cargo.toml
sway-groups-daemon/src/: dbus_monitor.rs  main.rs
sway-groups-dummy-window/: Cargo.toml
sway-groups-dummy-window/src/: main.rs
sway-groups-tests/: AI_TEST_INSTRUCTIONS.md  Cargo.toml  README.md
sway-groups-tests/src/: lib.rs
sway-groups-tests/src/common/: mod.rs
sway-groups-tests/tests/: test01_group_select.rs  test02_workspace_with_containers.rs  test03_global_workspace.rs  test04_workspace_move.rs  test05a_workspace_add_multi_group.rs  test05b_container_move_cross_group.rs  test05c_workspace_rename_merge.rs  test05d_global_multi_group.rs  test05e_unglobal_multi_group.rs  test05f_workspace_remove_keeps_other.rs  test05g_auto_delete_multi_group.rs  test06a_group_delete_orphan.rs  test06b_workspace_move_to_groups.rs  test07_group_rename.rs  test08_nav_next_prev.rs  test09_nav_go_back.rs  test10_workspace_rename_simple.rs  test11_workspace_groups_cmd.rs  test12_repair.rs  test_00_daemon_signal_communication.rs  test_01_group_select.rs  test_02_workspace_with_containers.rs  test_03_global_workspace.rs  test_04_workspace_move.rs  test_05a_multi_group_workspace_add.rs  test_05b_multi_group_container_move.rs  test_05c_multi_group_workspace_rename_merge.rs  test_05d_multi_group_global.rs  test_05e_multi_group_unglobal.rs  test_05f_multi_group_workspace_remove.rs  test_05g_multi_group_auto_delete.rs  test_06a_group_delete_multi_group_workspace.rs  test_06b_workspace_move_to_groups.rs  test_07_group_rename.rs  test_08_nav_next_prev.rs  test_09_nav_go_back.rs  test_10_workspace_rename_simple.rs  test_11_workspace_groups.rs  test_12_repair.rs  test_13_group_next_prev.rs  (+22 more)
tests/: TEST_COVERAGE.md  integration_test.sh  run_all.sh  test-instructions.md  test01_group_select.sh  test02_new_workspace_with_containers_and_workspaces.sh  test03_global_workspace.sh  test04_workspace_move.sh  test05_multi_group_plans.md  test05a_multi_group_workspace_add.sh  test05b_multi_group_container_move.sh  test05c_multi_group_workspace_rename_merge.sh  test05d_multi_group_global.sh  test05e_multi_group_unglobal.sh  test05f_multi_group_workspace_remove.sh  test05g_multi_group_auto_delete.sh  test06a_group_delete_multi_group_workspace.sh  test06b_workspace_move_to_groups.sh  test07_group_rename.sh  test08_nav_next_prev.sh  test09_nav_go_back.sh  test10_workspace_rename_simple.sh  test11_workspace_groups.sh  test12_repair.sh  test13_group_next_prev.sh  test14_workspace_list_output_format.sh  test15_sync_flags.sh  test16_group_prune.sh  test17_status.sh  test18_group_create.sh  test19_nav_move_to.sh
