[workspace]
resolver = "2"
members = ["sway-groups-core", "sway-groups-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["swayg developers"]
license = "MIT"
description = "Sway workspace groups management CLI"

[workspace.dependencies]
# SeaORM 2.0 with entity-first approach
sea-orm = { version = "2.0.0-rc.35", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "entity-registry",
    "schema-sync",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for identifiers
uuid = { version = "1", features = ["v4"] }

# directories
directories = "5"
