[workspace]
resolver = "2"
members = [
    "sway-groups-config",
    "sway-groups-core",
    "sway-groups-cli",
    "sway-groups-daemon",
    "sway-groups-dummy-window",
    "sway-groups-tests",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
authors = ["Benjamin Schnitzler <benjamin.schnitzler.github@e.mail.de>"]
license = "MIT"
repository = "https://github.com/bschnitz/sway-groups"
homepage = "https://github.com/bschnitz/sway-groups"

[workspace.dependencies]
# SeaORM 2.0 with entity-first approach
sea-orm = { version = "2.0.0-rc.35", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "entity-registry",
    "schema-sync",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for identifiers
uuid = { version = "1", features = ["v4"] }

# directories
directories = "5"

# Config
toml = "0.8"

# Wayland (for dummy window binary)
smithay-client-toolkit = { version = "0.20", default-features = false, features = [
    "calloop",
] }
calloop = "0.14"
calloop-wayland-source = "0.4"
wayland-client = "0.31"
