[package]
name = "sway-groups-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Command-line tool for managing sway workspaces in named groups."
categories = ["command-line-utilities"]
keywords = ["sway", "waybar", "workspace", "wayland"]

[[bin]]
name = "swayg"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
directories.workspace = true
sway-groups-core = { version = "0.3.0", path = "../sway-groups-core" }
sway-groups-config = { version = "0.3.0", path = "../sway-groups-config" }

[features]
default = []
