[package]
name = "sway-groups-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TOML configuration schema and loader for sway-groups."
categories = ["config"]
keywords = ["sway", "waybar", "workspace"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
regex = "1"
