[package]
name = "sway-groups-core"
version.workspace = true
edition.workspace = true

[lib]
name = "sway_groups_core"
crate-type = ["lib"]

[dependencies]
sea-orm.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[features]
default = []
