[package]
name = "sway-groups-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for sway-groups: DB entities, services, sway/waybar IPC."
categories = ["command-line-utilities"]
keywords = ["sway", "waybar", "workspace", "wayland"]

[lib]
name = "sway_groups_core"
crate-type = ["lib"]

[dependencies]
sea-orm.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
sway-groups-config = { version = "0.3.1", path = "../sway-groups-config" }

[features]
default = []
