[package]
name = "sway-groups-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swayg-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
sea-orm.workspace = true
directories.workspace = true
signal-hook = "0.3"
sway-groups-core = { path = "../sway-groups-core" }
