[package]
name = "sway-groups-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
description = "Background daemon that tracks external sway workspace events for sway-groups."
categories = ["command-line-utilities"]
keywords = ["sway", "waybar", "workspace", "wayland"]

[[bin]]
name = "swayg-daemon"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
sea-orm.workspace = true
directories.workspace = true
signal-hook = "0.3"
sway-groups-core = { version = "0.2.1", path = "../sway-groups-core" }
sway-groups-config = { version = "0.2.1", path = "../sway-groups-config" }
