[package]
name = "sway-groups-dummy-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal Wayland window used by the sway-groups integration tests."
publish = false

[[bin]]
name = "sway-dummy-window"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = { workspace = true }
calloop = { workspace = true }
calloop-wayland-source = { workspace = true }
wayland-client = { workspace = true }
libc = "0.2"
