[package]
name = "sway-groups-tests"
version.workspace = true
edition.workspace = true
description = "Integration tests for sway-groups"
publish = false

[lib]
name = "sway_groups_tests"
path = "src/lib.rs"

[[test]]
name = "test01_group_select"
path = "tests/test01_group_select.rs"
harness = true

[dependencies]
sway-groups-core = { path = "../sway-groups-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
sway-groups-core = { path = "../sway-groups-core" }
sea-orm = { workspace = true }
serde_json = { workspace = true }
