[package]
name = "sway-groups-tests"
version.workspace = true
edition.workspace = true
description = "Integration tests for sway-groups"
publish = false

[lib]
name = "sway_groups_tests"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
assert_cmd = "2.2"

[dev-dependencies]
sway-groups-dummy-window = { path = "../sway-groups-dummy-window" }
